<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:backgroundTint="@color/tarjeta"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numero_tema"
                style="@style/NUMERO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_tema_vista"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombre_tema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_tema_vista"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/repasos_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repasos_label"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/repasos_tema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/repasos_tema_vista" />

            <TextView
                android:id="@+id/evaluacion_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/evaluacion_label"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/evaluacion_tema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/evaluacion_tema_vista" />

        </LinearLayout>

        <TextView
            android:id="@+id/nota_tema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota_tema_vista"
            android:textSize="12sp"
            android:textStyle="italic"
            android:maxLines="4"
            android:ellipsize="end"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
